new_tests/semantics/scope/bad/020_BE2.cm

def a:Int = 5 
def b:Int = 7

a instanceof b 
